fixed spacing on creative learning page

--- a/css/style.css
+++ b/css/style.css
@@ -378,10 +378,6 @@ a.anchor{
 
 }
 
-#creative-learning-content p{
-    padding-right: 20px;
-}
-
 
 /* --------------- hmitl page styles --------------- */
 
@@ -393,10 +389,6 @@ a.anchor{
 
 #hmitl-content a{
     font-weight: bold;
-}
-
-#hmitl-content p{
-    padding-right: 20px;
 }
 
 #hmitl-content h1 {
